fix search-results container(removed 100% properties and made it center aligned

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -120,9 +120,8 @@ a:hover {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
   align-items: center;
+  justify-content: center;
 
   .time-table {
     display: flex;
